--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         mkdir build && cd build
         cmake .. -G "Visual Studio 16 2019" -A x64 -DXMRIG_DEPS=c:\xmrig-deps\msvc2019\x64
-        cmake --build . --config Release xmrig.exe
+        cmake --build . --config Release
         7z a release.zip .
     
     - name: Upload a Build Artifact
