--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         mkdir build && cd build
         cmake .. -G "Visual Studio 16 2019" -A x64 -DXMRIG_DEPS=c:\xmrig-deps\msvc2019\x64
         cmake --build . --config Release
-        7z a release.zip .
+        7z a release-win-msvc.zip Release
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.3.1
@@ -35,7 +35,7 @@ jobs:
         # Artifact name
         name: artifact # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: build/release.zip
+        path: build/release-win-msvc.zip
         # The desired behavior if no files are found using the provided path.
         if-no-files-found: warn # optional, default is warn
         retention-days: 90
@@ -43,7 +43,7 @@ jobs:
     - name: upload release
       uses: Shopify/upload-to-release@v1.0.1
       with:
-        name: release.zip
+        name: build/release-win-msvc.zip
         path: build
         repo-token: secrets.GITHUB_TOKEN
       
